--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "dev": "concurrently \"npm run start\" \"npm run electron\""
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.62.15",
     "@types/react-query": "^1.2.8",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
