--- a/package.json
+++ b/package.json
@@ -13,22 +13,35 @@
     "dev": "concurrently \"npm run start\" \"npm run electron\""
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "@reduxjs/toolkit": "^2.5.0",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.62.15",
+    "@types/node": "^22.10.5",
     "@types/react-query": "^1.2.8",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next-themes": "^0.4.4",
+    "nextron": "^9.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "redux": "^5.0.1",
     "sonner": "^1.7.1",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
@@ -36,17 +49,20 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "electron": "^33.2.1",
+    "electron": "^33.3.1",
+    "electron-builder": "^25.1.8",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
+    "postcss-load-config": "^6.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.7"
   }
 }
