--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "version": "0.0.0",
   "main": "main.js",
   "scripts": {
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "serve": "vite preview",
-    "start": "vite",
-    "electron": "electron .",
-    "dev": "concurrently \"npm run start\" \"npm run electron\""
+    "start": "electron ."
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -45,7 +43,13 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.47.12",
     "@tanstack/react-query": "^5.62.15",
+    "@types/html2canvas": "^0.5.35",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22.10.5",
     "@types/react-query": "^1.2.8",
     "axios": "^1.7.9",
@@ -54,7 +58,9 @@
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
     "next-themes": "^0.4.4",
     "nextron": "^9.4.0",
@@ -76,6 +82,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
@@ -88,6 +96,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "postcss-load-config": "^6.0.1",
     "tailwindcss": "^3.4.17",
