--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "serve": "vite preview",
-    "start": "electron ."
+    "start": "electron .",
+    "electron": "electron .",
+    "dev": "concurrently \"npm run start\" \"npm run electron\""
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
